add getWalletData wallet util

--- a/.env.exmple
+++ b/.env.exmple
@@ -1,4 +1,5 @@
 PAIR_URL="" # URL to listening pair
 AMOUNT="" # Amount to buy
 PRICE="" # Price to buy
-CUSTOM_WS_SERVER="https://trade.zano.org" # Custom server for WS
+CUSTOM_WS_SERVER="https://trade.zano.org" # Custom server for WS ("https://trade.zano.org" if not specified)
+SIMPLEWALLET_PORT="" # SimpleWallet port from Zano desktop app (11211 if not specified)
