--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx tsx index.ts"
+    "start": "npx tsx index.ts",
+    "dev": "npx nodemon --exec \"npx tsx index.ts\""
   },
   "author": "",
   "license": "ISC",
@@ -13,9 +14,12 @@
     "axios": "^1.7.7",
     "decimal.js": "^10.4.3",
     "dotenv": "^16.4.5",
-    "socket.io-client": "^4.8.0"
+    "socket.io-client": "^4.8.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@types/node": "^22.7.7"
+    "@types/node": "^22.7.7",
+    "@types/uuid": "^10.0.0",
+    "nodemon": "^3.1.7"
   }
 }
