add zano access token usage

--- a/.env.exmple
+++ b/.env.exmple
@@ -1,5 +1,9 @@
+# Required
 PAIR_URL="" # URL to listening pair
 AMOUNT="" # Amount to buy
 PRICE="" # Price to buy
+API_TOKEN="" # API token of SimpleWallet from Zano desktop app
+
+# Optional
 CUSTOM_WS_SERVER="https://trade.zano.org" # Custom server for WS ("https://trade.zano.org" if not specified)
 SIMPLEWALLET_PORT="" # SimpleWallet port from Zano desktop app (11211 if not specified)
