--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "axios": "^1.7.7",
     "decimal.js": "^10.4.3",
     "dotenv": "^16.4.5",
+    "node-forge": "^1.3.1",
     "socket.io-client": "^4.8.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.7.7",
+    "@types/node-forge": "^1.3.11",
     "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.7"
   }
