add zano trade auto auth

--- a/.env.exmple
+++ b/.env.exmple
@@ -5,5 +5,5 @@ PRICE="" # Price to buy
 API_TOKEN="" # API token of SimpleWallet from Zano desktop app
 
 # Optional
-CUSTOM_WS_SERVER="https://trade.zano.org" # Custom server for WS ("https://trade.zano.org" if not specified)
+CUSTOM_SERVER="https://trade.zano.org" # Custom server for WS ("https://trade.zano.org" if not specified)
 SIMPLEWALLET_PORT="" # SimpleWallet port from Zano desktop app (11211 if not specified)
