add logger and main file logs

--- a/.env.exmple
+++ b/.env.exmple
@@ -5,5 +5,6 @@ PRICE="" # Price to buy
 API_TOKEN="" # API token of SimpleWallet from Zano desktop app
 
 # Optional
-CUSTOM_SERVER="https://trade.zano.org" # Custom server for WS ("https://trade.zano.org" if not specified)
+CUSTOM_SERVER="https://trade.zano.org" # Custom server for WS, last slash should be omitted ("https://trade.zano.org" if not specified)
 SIMPLEWALLET_PORT="" # SimpleWallet port from Zano desktop app (11211 if not specified)
+DISABLE_INFO_LOGS="true" # Disable info logs (info logs are enabled if this var is not "true")
