--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "decimal.js": "^10.4.3",
     "dotenv": "^16.4.5",
     "node-forge": "^1.3.1",
+    "pino": "^9.5.0",
+    "pino-pretty": "^11.3.0",
     "socket.io-client": "^4.8.0",
     "uuid": "^10.0.0"
   },
