--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,11 @@
 # Required
 PAIR_URL="" # URL to listening pair
-AMOUNT="" # Amount to buy
-PRICE="" # Price to buy
+AMOUNT="" # Amount to buy/sell
+PRICE="" # Price to buy/sell
 API_TOKEN="" # API token of SimpleWallet from Zano desktop app
 
 # Optional
 CUSTOM_SERVER="https://trade.zano.org" # Custom server for WS, last slash should be omitted ("https://trade.zano.org" if not specified)
 SIMPLEWALLET_PORT="" # SimpleWallet port from Zano desktop app (11211 if not specified)
 DISABLE_INFO_LOGS="true" # Disable info logs (info logs are enabled if this var is not "true")
+TYPE="BUY" # Type of the observed order ("BUY" for buy type and any other value for sell type)
