add check locked amount interval worker

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ PAIR_URL="" # URL to listening pair
 AMOUNT="" # Amount to buy/sell
 PRICE="" # Price to buy/sell
 API_TOKEN="" # API token of SimpleWallet from Zano desktop app
+ZANOD_URL="https://localhost:11211" # Zano daemon URL
 
 # Optional
 CUSTOM_SERVER="https://trade.zano.org" # Custom server for WS, last slash should be omitted ("https://trade.zano.org" if not specified)
