add database support

--- a/config.example.json
+++ b/config.example.json
@@ -3,18 +3,7 @@
         "pair_url": "https://trade.zano.org/dex/trading/107",
         "amount": "1",
         "price": "2132131",
-        "type": "SELL"
-    },
-    {
-        "pair_url": "https://trade.zano.org/dex/trading/107",
-        "amount": "1",
-        "price": "99999",
-        "type": "SELL"
-    },
-    {
-        "pair_url": "https://trade.zano.org/dex/trading/107",
-        "amount": "1",
-        "price": "888888",
-        "type": "SELL"
+        "type": "SELL",
+        "trade_id": "cfkigj37t0efoidsueq908eowidc8a98p"
     }
 ]
