--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "node-forge": "^1.3.1",
     "pino": "^9.5.0",
     "pino-pretty": "^11.3.0",
+    "sequelize": "^6.37.5",
     "socket.io-client": "^4.8.0",
+    "sqlite3": "^5.1.7",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
